[package]
name = "hifiasm2txt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.9", features = ["string"] }
ctor = "0.2.8"
gzp = "0.11.3"
lazy_static = "1.5.0"
libc = "0.2.155"
libc-stdhandle = "0.1.0"
path-absolutize = "3.1.1"
